[tool.poetry]
name = "makespan-poc"
version = "0.1.0"
description = "PoC for makespan project"
authors = ["Martin Matyasek <martin.matyasek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
chart-studio = "*"
cytoolz = "*"
glpk = "*"
jupyter = "*"
jupyterlab = "*"
matplotlib = "*"
numpy = "*"
pandas = "*"
plotly = "*"
pulp = "*"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8-black = "*"
flake8-comprehensions = "*"
flake8-isort = "*"
flake8-markdown = "*"
flake8-mutable = "*"
flake8-pytest = "*"
flakehell = "*"
mypy = "*"
pandas-vet = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"

[tool.black]
line-length = 79
target-version = ['py38']
skip-string-normalization = 'true'

[tool.flakehell]
exclude = [".ipynb_checkpoints", "**/.ipynb_checkpoints", "notebooks"]
format = "grouped"
max_line_length = 79
show_source = true

[tool.flakehell.plugins]
"flake8-*" = ["+*"]
mccabe = ["+*"]
pandas-vet = ["+*", "-PD901"]
pycodestyle = ["+*", "-D400"]
pyflakes = ["+*"]
pylint = ["+*"]

[tool.isort]
multi_line_output = 3
line_length = 79
include_trailing_comma = true
skip_glob = [".ipynb_checkpoints", "**/.ipynb_checkpoints"]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
